@@ -1,3 +1,7 @@
+2012-02-15  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* src/pj_utils.c: Add pj_get_spheroid_defn() (#142)
+
 2012-02-08  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* src/pj_apply_gridshift.c: Ensure that one amoung many points
